Fix #117816: Import USD DistantLight as Blender Sun light