source/blender/io/usd/intern/usd_reader_light.cc
@@ -148,6 +148,19 @@ void USDLightReader::read_object_data(Main *bmain, const double motionSampleTime
       }
     }
   }
+  else if (prim_.IsA<pxr::UsdLuxDistantLight>()) {
+    blight->type = LA_SUN;
+
+    pxr::UsdLuxDistantLight distant_light(prim_);
+    if (distant_light) {
+      if (pxr::UsdAttribute angle_attr = distant_light.GetAngleAttr()) {
+        float angle = 0.0f;
+        if (angle_attr.Get(&angle, motionSampleTime)) {
+          blight->sun_angle = DEG2RADF(angle * 2.0f);
+        }
+      }
+    }
+  }
 
   /* Intensity */
   if (pxr::UsdAttribute intensity_attr = light_api.GetIntensityAttr()) {
